--- a/app/src/main/res/drawable/shape_snatch_normal.xml
+++ b/app/src/main/res/drawable/shape_snatch_normal.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <stroke android:color="#ffffff" android:width="0.5dp"/>
-    <solid android:color="#6e0fd0"/>
+    <solid android:color="#6e0fd0" />
+    <corners android:radius="5dp" />
 </shape>
