--- a/app/src/main/res/layout/item_snatch_his.xml
+++ b/app/src/main/res/layout/item_snatch_his.xml
@@ -46,6 +46,6 @@
         android:ellipsize="middle"
         android:gravity="center"
         android:singleLine="true"
-        android:textColor="@color/white"
+        android:textColor="#33ffff"
         android:textSize="11sp" />
 </LinearLayout>
