--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -2,21 +2,133 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="75dp">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/container_pk_guess"
+        android:layout_width="match_parent"
+        android:layout_height="31.5dp"
+        android:background="@drawable/bg_bottom_pk_layout"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <com.whzl.mengbi.ui.widget.view.PkRankView
+            android:id="@+id/iv_my_rank"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:layout_marginStart="27dp"
+            android:layout_marginBottom="3.5dp"
+            android:padding="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.whzl.mengbi.ui.widget.view.PkRankView
+            android:id="@+id/iv_other_rank"
+            android:layout_width="27dp"
+            android:layout_height="27dp"
+            android:layout_marginEnd="27dp"
+            android:layout_marginBottom="3.5dp"
+            android:padding="3dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <LinearLayout
+            android:layout_width="83dp"
+            android:layout_height="22dp"
+            android:layout_marginStart="89dp"
+            android:background="@drawable/shape_left_odds_pk"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/iv_my_rank"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_my_rank">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="押我方主播赢"
+                android:textColor="@color/white"
+                android:textSize="9sp" />
+
+            <TextView
+                android:id="@+id/tv_left_odds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="赔率"
+                android:textColor="#FFF800"
+                android:textSize="7sp" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16.5dp"
+            android:includeFontPadding="false"
+            android:text="竞猜中"
+            android:textColor="@color/white"
+            android:textSize="8sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:includeFontPadding="false"
+            android:text="VS"
+            android:textColor="@color/white"
+            android:textSize="7sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <LinearLayout
+            android:layout_width="83dp"
+            android:layout_height="22dp"
+            android:layout_marginEnd="89dp"
+            android:background="@drawable/shape_right_odds_pk"
+            android:gravity="center"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="@id/iv_my_rank"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/iv_my_rank">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="押对方主播赢"
+                android:textColor="@color/white"
+                android:textSize="9sp" />
+
+            <TextView
+                android:id="@+id/tv_right_odds"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:includeFontPadding="false"
+                android:text="赔率"
+                android:textColor="#FFF800"
+                android:textSize="7sp" />
+        </LinearLayout>
+    </android.support.constraint.ConstraintLayout>
 
     <RelativeLayout
         android:id="@+id/rl_pk_progress"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="32.5dp"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
-        android:background="@drawable/pk_background"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_marginTop="11dp"
+        android:background="@drawable/bg_top_pk_layout"
+        android:paddingStart="7dp"
+        android:paddingEnd="7dp"
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -32,7 +144,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/white"
-                    android:textSize="10sp" />
+                    android:textSize="8sp" />
 
                 <TextView
                     android:id="@+id/tv_time_pk"
@@ -41,13 +153,14 @@
                     android:layout_marginLeft="5dp"
                     android:layout_toRightOf="@id/tv_pk_title"
                     android:textColor="#FFF800"
-                    android:textSize="10sp" />
+                    android:textSize="8sp" />
             </RelativeLayout>
 
             <LinearLayout
                 android:id="@+id/ll_pk_progress"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:layout_marginTop="1dp"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
@@ -69,7 +182,7 @@
                     <com.whzl.mengbi.ui.widget.view.PkProgressView
                         android:id="@+id/pb_pk"
                         android:layout_width="match_parent"
-                        android:layout_height="18dp"
+                        android:layout_height="15dp"
                         android:max="100"
                         app:alignLeft="20dip"
                         app:backColor="#FF4676"
@@ -135,12 +248,12 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_my_follow"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="5dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
         app:layout_constraintLeft_toLeftOf="parent" />
 
@@ -151,7 +264,7 @@
         android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
         android:layout_marginRight="5dp"
-        android:layout_marginBottom="21dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="@id/rl_pk_progress"
         app:layout_constraintRight_toRightOf="parent" />
 </android.support.constraint.ConstraintLayout>
