--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -627,7 +627,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
-                        android:visibility="visible" />
+                        android:visibility="gone" />
 
                     <com.whzl.mengbi.ui.widget.view.HeadlineLayout
                         android:id="@+id/hl_layout"
