--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -33,6 +33,7 @@
             app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
+            android:id="@+id/container_left_odds"
             android:layout_width="83dp"
             android:layout_height="22dp"
             android:layout_marginStart="89dp"
@@ -86,6 +87,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <LinearLayout
+            android:id="@+id/container_right_odds"
             android:layout_width="83dp"
             android:layout_height="22dp"
             android:layout_marginEnd="89dp"
