change rob luck ui

--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -700,7 +700,7 @@
                         android:layout_width="326dp"
                         android:layout_height="33.5dp"
                         android:layout_marginTop="50dp"
-                        android:background="@drawable/bg_room_redpacket_enter"
+                        android:background="@drawable/bg_rob_luck_enter"
                         android:gravity="center_vertical"
                         android:orientation="vertical"
                         android:visibility="gone">
@@ -714,6 +714,34 @@
 
                             <com.whzl.mengbi.ui.widget.view.RedpacketEnterView
                                 android:id="@+id/redpacket_enter_view"
+                                android:layout_width="1000dp"
+                                android:layout_height="wrap_content"
+                                android:includeFontPadding="false"
+                                android:maxLines="1"
+                                android:textColor="#ffffff"
+                                android:textSize="9sp" />
+                        </FrameLayout>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:id="@+id/ll_rob_luck"
+                        android:layout_width="326dp"
+                        android:layout_height="33.5dp"
+                        android:layout_marginTop="50dp"
+                        android:background="@drawable/bg_rob_luck_enter"
+                        android:gravity="center_vertical"
+                        android:orientation="vertical"
+                        android:visibility="gone">
+
+
+                        <FrameLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:paddingLeft="39.5dp"
+                            android:paddingRight="19dp">
+
+                            <com.whzl.mengbi.ui.widget.view.RedpacketEnterView
+                                android:id="@+id/rob_luck_view"
                                 android:layout_width="1000dp"
                                 android:layout_height="wrap_content"
                                 android:includeFontPadding="false"
