--- a/app/src/main/res/layout/layout_pk_new.xml
+++ b/app/src/main/res/layout/layout_pk_new.xml
@@ -17,20 +17,20 @@
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:layout_marginStart="27dp"
-            android:layout_marginBottom="3.5dp"
             android:padding="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <com.whzl.mengbi.ui.widget.view.PkRankView
             android:id="@+id/iv_other_rank"
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:layout_marginEnd="27dp"
-            android:layout_marginBottom="3.5dp"
             android:padding="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <LinearLayout
             android:id="@+id/container_left_odds"
